<resources>
    <string name="app_name">Carpool</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">请登录</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- 控件文本-->
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="phone">手机号</string>
    <string name="real_name">真实姓名</string>
    <string name="sex">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="id_num">身份证号</string>
    <string name="license_num">驾驶证号</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="back_to_login">返回登录</string>
    <string name="forget_password">忘记密码？</string>
    <string name="passenger">乘客</string>
    <string name="driver">司机</string>
    <string name="carpool">拼车</string>
    <string name="user">用户</string>
    <string name="nearby">附近</string>
    <string name="next_step">下一步</string>
    <string name="reg_time">注册日期</string>
    <string name="update">修改</string>
    <string name="confirm">确定</string>
    <string name="personal_info">个人信息</string>
    <string name="sign_out">注销</string>
    <string name="origin">起点</string>
    <string name="destination">终点</string>
    <string name="map_click">地图点选</string>
    <string name="start_carpool">发起拼车</string>
    <string name="start_date">出发日期</string>
    <string name="start_time">出发时刻</string>
    <string name="number_of_people">人数</string>
    <string name="cancel">取消</string>
    <string name="want_to_drive">我要开车</string>
    <string name="want_to_take">我要乘车</string>
    <string name="save">保存</string>
    <string name="my">我的</string>

    <!-- 反馈提示 -->
    <string name="no_user">用户不存在</string>
    <string name="wrong_password">密码错误</string>
    <string name="no_phone">该手机号未注册</string>
    <string name="exist_phone">该手机号已被注册</string>
    <string name="register_success">注册成功</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="server_connect_fail">服务器连接失败</string>
    <string name="unknown_error">未知错误</string>
    <string name="blank_origin">起点不能为空</string>
    <string name="blank_dest">终点不能为空</string>
    <string name="place_cannot_select">该地点无法选择</string>
    <string name="confirm_place">确定选择该地点吗</string>
    <string name="click_operation">请放大地图后，点击想要设置的地点</string>
    <string name="create_success">创建成功</string>
    <string name="create_fail">创建失败</string>
    <string name="update_success">修改成功</string>
    <string name="update_fail">修改失败</string>
    <string name="nothing_changed">您未做任何修改</string>

    <!-- 服务器地址 -->
    <string name="server_addr">http://47.99.75.250:8080/Carpool/</string>
    <string name="passenger_login">PLoginAction</string>
    <string name="driver_login">DLoginAction</string>
    <string name="passenger_register">PRegisterAction</string>
    <string name="driver_register">DRegisterAction</string>
    <string name="passenger_update">PUpdateAction</string>
    <string name="driver_update">DUpdateAction</string>
    <string name="create_activity">ACreateAction</string>
    <string name="nearby_activity">AListAction</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
