<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tj.carpool.regActivity">


    <EditText
        android:layout_width="400dp"
        android:layout_height="60dp"
        android:inputType="textPersonName"
        android:id="@+id/reg_edit_username"
        android:drawableStart="@android:drawable/ic_menu_myplaces"
        android:hint="@string/username"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="400dp"
        android:layout_height="60dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/reg_edit_pwd"
        android:drawableStart="@android:drawable/ic_lock_idle_lock"
        android:hint="@string/password"
        android:layout_below="@+id/reg_edit_username"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="400dp"
        android:layout_height="60dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/reg_edit_repwd"
        android:drawableStart="@android:drawable/ic_lock_idle_lock"
        android:hint="@string/confirm_password"
        android:layout_below="@+id/reg_edit_pwd"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="400dp"
        android:layout_height="60dp"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/reg_edit_realname"
        android:hint="@string/real_name"
        android:layout_below="@+id/reg_edit_repwd"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="400dp"
        android:layout_height="60dp"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/reg_edit_phone"
        android:hint="@string/phone"
        android:layout_below="@+id/reg_edit_realname"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_edit_phone"
        android:id="@+id/reg_edit_sex"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            android:textSize="20sp"
            android:id="@+id/reg_label_sex"/>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/radio_male"
                android:text="@string/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/radio_female"
                android:text="@string/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RadioGroup>
    </LinearLayout>


    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/reg_btn_register"
        android:textColor="#ffffff"
        android:background="#e52525"
        android:textSize="20sp"
        android:layout_below="@+id/reg_edit_sex"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />



</RelativeLayout>
