<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tj.carpool.LoginActivity">


<Button
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/login"
    android:id="@+id/login_btn_login"
    android:background="#545bcb"
    android:textSize="20sp"
    android:textColor="#ffffff"
    android:layout_below="@+id/login_edit_pwd"
    android:layout_alignParentStart="true"
    android:layout_marginTop="52dp" />

<Button
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/register"
    android:id="@+id/login_btn_register"
    android:textColor="#ffffff"
    android:background="#e52525"
    android:textSize="20sp"
    android:layout_below="@+id/login_btn_login"
    android:layout_alignParentStart="true"
    android:layout_marginTop="10dp" />


    <ImageView
        android:id="@+id/logo"
        android:layout_width="720dp"
        android:layout_height="173dp"
        android:layout_alignParentTop="true"
        android:src="@drawable/logo" />

<EditText
    android:layout_width="400dp"
    android:layout_height="60dp"
    android:inputType="textPassword"
    android:ems="10"
    android:id="@+id/login_edit_pwd"
    android:drawableStart="@android:drawable/ic_lock_idle_lock"
    android:hint="@string/password"
    android:layout_below="@+id/login_edit_phone"
    android:layout_alignParentStart="true" />

<EditText
    android:layout_width="400dp"
    android:layout_height="60dp"
    android:inputType="phone"
    android:id="@+id/login_edit_phone"
    android:drawableStart="@android:drawable/ic_menu_myplaces"
    android:hint="@string/phone"
    android:layout_below="@+id/logo"
    android:layout_alignParentStart="true"
    android:layout_marginTop="20dp" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/forget_password"
    android:id="@+id/login_text_forget_pwd"
    android:layout_below="@+id/login_edit_pwd"
    android:layout_alignParentEnd="true"
    android:textSize="15sp" />


</RelativeLayout>
