<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.CreateCarpoolFragment">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/origin_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
            android:id="@+id/label_txt_origin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/origin"
            android:textSize="20sp"
            android:layout_marginStart="20dp"/>

            <EditText
            android:id="@+id/edit_origin"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:textSize="20sp" />

            <Button
            android:id="@+id/btn_origin"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/map_click"
            android:background="@color/sandybrown"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dest_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/origin_layout">

            <TextView
            android:id="@+id/label_txt_dest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/destination"
            android:textSize="20sp"
            android:layout_marginStart="20dp"/>

            <EditText
            android:id="@+id/edit_dest"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:textSize="20sp" />

            <Button
            android:id="@+id/btn_dest"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/map_click"
            android:background="@color/sandybrown"/>
        </LinearLayout>

        <com.baidu.mapapi.map.MapView
            android:id="@+id/mmap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dest_layout"
            android:layout_above="@+id/btn_start">

        </com.baidu.mapapi.map.MapView>


        <Button
            android:id="@+id/btn_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:background="#e52525"
            android:text="@string/start_carpool"
            android:textColor="#ffffff"
            android:textSize="20sp" />


        <ImageButton
            android:id="@+id/btn_loc"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="100dp"
            android:layout_marginStart="30dp"
            android:src="@android:drawable/ic_menu_mylocation"
            android:background="@color/white"/>
    </RelativeLayout>

</FrameLayout>