<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/tab_menu"
        android:background="@android:color/transparent">
    </FrameLayout>
    <LinearLayout
        android:id="@+id/tab_menu"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/tab_start"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/tab_menu_car"
            android:gravity="center"
            android:text="@string/carpool"/>

        <TextView
            android:id="@+id/tab_list"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/tab_menu_list"
            android:gravity="center"
            android:text="@string/nearby"/>

        <TextView
            android:id="@+id/tab_user"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawablePadding="3dp"
            android:drawableTop="@drawable/tab_menu_user"
            android:gravity="center"
            android:text="@string/my"/>


    </LinearLayout>

    <View
        android:id="@+id/div_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/darkslategray"
        android:layout_above="@id/tab_menu"/>

    <!--<FrameLayout-->
        <!--android:id="@+id/fragment_container"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_below="@id/tab_title"-->
        <!--android:layout_above="@id/tab_menu"-->
        <!--android:background="@android:color/transparent">-->
    <!--</FrameLayout>-->


</RelativeLayout>